removed scalloped border from bookstack image, adjusted media queries to prevent horizontal scrolling

--- a/css/custom.css
+++ b/css/custom.css
@@ -280,8 +280,8 @@ footer {
 @media only screen and (min-width: 1045px) and (max-width: 1365px) {
 
      body {
-            background-size: 35% 100%;
-            margin-left: 20em;
+            background-size: 30% 100%;
+            margin-left: 15em;
         }
 
 }
